# attic

./: README.md
java-interpolated-properties/: .hg_archival.txt  .hgtags  COPYING.LIB  pom.xml
java-interpolated-properties/src/main/java/co/bitcode/utils/: InterpolatedProperties.java
jn/: Makefile  jn.c
keyled/: keyled.cpp  keyled.pro  keyled.qrc
nanogear/nanogear/: .gitignore  AUTHORS  CMakeLists.txt  NEWS  VERSION.cmake
nanogear/nanogear/cmake/Modules/: FindLibmagic.cmake
nanogear/nanogear/examples/: CMakeLists.txt
nanogear/nanogear/examples/directory/: CMakeLists.txt  directory.cpp
nanogear/nanogear/examples/forms/: CMakeLists.txt  forms.cpp
nanogear/nanogear/examples/simple/: CMakeLists.txt  simple.cpp
nanogear/nanogear/lib/: CMakeLists.txt
nanogear/nanogear/lib/connectors/internal/: CMakeLists.txt  nhttpserver.cpp  nhttpserver.h  nrequesthandler.cpp  nrequesthandler.h  nutility.h
nanogear/nanogear/lib/core/: CMakeLists.txt  nanogear_global.h  napplication.cpp  napplication.h  nclientinfo.cpp  nclientinfo.h  nconnector.cpp  nconnector.h  ndirectoryresource.h  nmetadata.h  nmethod.h  nmimetype.h  npreference.h  npreferencelist.h  nprotocol.h  nrepresentation.h  nrequest.cpp  nrequest.h  nresource.h  nresponse.cpp  nresponse.h  nrouter.h  nserver.cpp  nserver.h  nstatus.h  nuniform.cpp  nuniform.h
nanogear/qscgi/: example.h  main.cpp  qscgi.cpp  qscgi.h  qscgi.pro
powershell-2/: post-install.ps1
powershell-2/Post-Install/: Post-Install.psd1  Security.psm1  Services.psm1  Tasks.psm1
rpmdevtools-extras/: Makefile  cmdspec  pmk
sublime.el/: sublime-system.el  sublime.el
yum-utils-extra/: Makefile  package-deep-cleanup.8.txt  package-deep-cleanup.py
yum-utils-extra/examples/: gnome  workstation
(+1 files in other folders)
